# satellite_parameters_determining

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: Core.cpp  Core.hpp  F.hpp  TestFunction.cpp  TestFunction.hpp  TestFunctionGenerator.hpp
core/conditions/: Conditions.hpp  FileConditionsGenerator.cpp  FileConditionsGenerator.hpp  IConditionsGenerator.hpp  IMeasurementGenerator.hpp  NoisedMeasurementGenerator.cpp  NoisedMeasurementGenerator.hpp  TrueMeasurementGenerator.cpp  TrueMeasurementGenerator.hpp
datafiles/: sample1.txt
global/: Constants.hpp  FunctionCreator.cpp  FunctionCreator.hpp  TaskParameters.hpp
integration/solver/: AbstractSolver.cpp  AbstractSolver.hpp
integration/system/: SpacecraftECEF.cpp  SpacecraftECEF.hpp  SpacecraftECI.cpp  SpacecraftECI.hpp
least_squares/: DesignationFunction.cpp  DesignationFunction.hpp  Iterator.cpp  Iterator.hpp  PartialDerivativeMatrix.cpp  PartialDerivativeMatrix.hpp  ResidualsFunction.cpp  ResidualsFunction.hpp  ResidualsFunctionGenerator.cpp  ResidualsFunctionGenerator.hpp
least_squares/functions/: DesignationFunction.cpp  DesignationFunctionGenerator.cpp  StateFunction.cpp  (+7 more)
output/: AbstractFileOutputter.hpp  FileOutputter.hpp  IOutputter.hpp
radiotelescopes/: DesignationsNoiseApplier.cpp  DesignationsNoiseApplier.hpp  RadioTelescopeSystem.cpp  RadioTelescopeSystem.hpp  TelescopeControl.cpp  TelescopeControl.hpp
utils/: LinAlg.cpp  LinAlg.hpp  Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp  coordinates.cpp  coordinates.hpp  time.cpp  time.hpp
visualize/: designations_points.py  visualize.py
(+5 files in other folders)
